Fix video width on mobiles

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -185,7 +185,7 @@ button {
       padding-left: 0;
     }
     video {
-      max-width: 360px;
+      max-width: 100%;
     }
     .author {
       font-size: 1rem;
